--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>md2pdf - Markdown to PDF</title>
+    <title> md2pdf </title>
   </head>
 
   <body>
